# seccompiler

./: .gitignore  .platform  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  coverage_config_aarch64.json  coverage_config_x86_64.json
.buildkite/: custom-tests.json
.github/: dependabot.yml
docs/: json_format.md
src/: lib.rs
src/backend/: bpf.rs  condition.rs  filter.rs  mod.rs  rule.rs
src/frontend/: json.rs
src/syscall_table/: aarch64.rs  loongarch64.rs  mod.rs  riscv64.rs  s390x.rs  x86_64.rs
tests/: integration_tests.rs  json.rs  multi_thread.rs
tools/: generate_syscall_tables.sh
