[package]
name = "seccompiler"
version = "0.5.0"
authors = ["Amazon Firecracker Team <firecracker-maintainers@amazon.com>"]
description = "Provides easy-to-use seccomp-bpf jailing."
repository = "https://github.com/rust-vmm/seccompiler"
readme = "README.md"
keywords = ["seccomp", "jail", "sandbox"]
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[features]
json = ["serde", "serde_json"]

[dependencies]
libc = "^0.2.153"
serde = { version = "^1.0.27", features = ["derive"], optional = true}
serde_json = {version = "^1.0.9", optional = true}
